--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,18 @@
-@use "globals" as *;
-@import "preview-card";
-@import "buttons";
-@import "mobile";
+@use 'globals' as *;
+@import 'preview-card';
+@import 'buttons';
+@import 'mobile';
+
+html {
+  font-size: 14px;
+}
 
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: $bg-color;
-  font-size: 14px;
   color: $light-color;
+
+  min-height: 100vh;
 }
 
 img {
@@ -23,12 +28,13 @@ img {
 
 .container {
   width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  min-height: 100vh;
 
+  padding: 2rem 1.15rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @each $index in (1, 2, 3, 4, 5, 6) {
   h#{$index} {
